--- a/index.html
+++ b/index.html
@@ -140,6 +140,28 @@
                 <div class="job-container">
                     <div class="col-1">
                         <div class="company-img">
+                            <a href="https://www.rrd.com/" target="_blank" title="https://www.rrd.com/"><img src="./images/rrd.png"></a>
+                        </div>
+                        <div class="company">
+                            <p class="company-name">R.R. Donnelley</p>
+                            <p class="job-title">Data Management Team Lead</p>
+                        </div>
+                    </div>
+                    <div class="col-2"><p>2014-2016</p><p>Itasca, IL</p></div>
+                </div>
+                <div class="job-description">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <ul>
+                        <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
+                        <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                    </ul>
+                </div>
+
+                <div class="break"></div>
+
+                <div class="job-container">
+                    <div class="col-1">
+                        <div class="company-img">
                             <a href="https://www.marines.mil/" target="_blank" title="https://www.marines.mil/"><img src="./images/usmc.png"></a>
                         </div>
                         <div class="company">
@@ -157,6 +179,8 @@
                         <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
                     </ul>
                 </div>
+
+                <div class="break"></div>
 
                 <div class="job-container">
                     <div class="col-1">
@@ -179,7 +203,46 @@
                     </ul>
                 </div>
 
+                <div class="break-blank"></div>
+            
+                <div class="section-heading">Education</div>
+                <div class="border-thin"></div>
+                <div class="border-thick"></div>
+
+                <div class="job-container">
+                    <div class="col-1">
+                        <div class="company-img">
+                            <a href="https://illinois.edu/" target="_blank" title="https://illinois.edu/"><img src="./images/uiuc.png"></a>
+                        </div>
+                        <div class="company">
+                            <p class="company-name">University of Illinois Urbana-Champaign</p>
+                            <p class="company-location">Master of Library & Information Science (MLIS)</p>
+                            <p class="job-title">GPA: 3.96 / 4.00</p>
+                        </div>
+                    </div>
+                    <div class="col-2"><p>2019</p><p>Champaign, IL</p></div>
+                </div>
+                <div class="job-description">
+                    <p><span style="font-weight: 600;">Activities and Societies:</span> Student Leadership - Masters Student Faculty Meeting Representative, 2016-2017</p>
+                </div>
+
                 <div class="break"></div>
+
+                <div class="job-container">
+                    <div class="col-1">
+                        <div class="company-img">
+                            <a href="https://www.purdue.edu/" target="_blank" title="https://www.purdue.edu/"><img src="./images/purdue.png"></a>
+                        </div>
+                        <div class="company">
+                            <p class="company-name">Purdue University</p>
+                            <p class="company-location">Bachelor of Science (BS), Aviation Technology</p>
+                            <p class="job-title">GPA: 3.62 / 4.00</p>
+                        </div>
+                    </div>
+                    <div class="col-2"><p>2013</p><p>West Lafayette, IN</p></div>
+                </div>
+
+                <div class="break-blank"></div>
 
 
             </div>
