--- a/index.html
+++ b/index.html
@@ -203,9 +203,8 @@
                     </ul>
                 </div>
 
-                <div class="break-blank"></div>
             
-                <div class="section-heading">Education</div>
+                <div class="section-heading" style="margin-top: 60px;">Education</div>
                 <div class="border-thin"></div>
                 <div class="border-thick"></div>
 
@@ -241,8 +240,6 @@
                     </div>
                     <div class="col-2"><p>2013</p><p>West Lafayette, IN</p></div>
                 </div>
-
-                <div class="break-blank"></div>
 
 
             </div>
