--- a/index.html
+++ b/index.html
@@ -36,9 +36,64 @@
 
         <div id="resume">
             <div class="col-1-container">
-                <div class="pfp"><img src="./images/pritz_profile-1.jpg"></div>
-                <div class="name">Michael Pritz</div>
-                <div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                <div class="section-wrap">
+                    <div class="pfp"><img src="./images/pritz_profile-1.jpg"></div>
+                    <div class="name">Michael Pritz</div>
+                    <div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+                <div class="section-wrap">
+                    <div class="at-a-glance">
+                        <div class="line-1">
+                            <p>Profession</p>
+                            <p>Librarian</p>
+                        </div>
+                        <div class="line-2">
+                            <p>Date of Birth</p>
+                            <p>28 November 1985</p>
+                        </div>
+                        <div class="line-3">
+                            <p>Degree</p>
+                            <p>Graduate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-wrap">
+                    <a href="mailto:mpritz87@gmail.com">
+                        <div class="contact">
+                            Send Message
+                        </div>
+                    </a>
+                </div>
+                <div class="section-wrap">
+                    <div class="section-heading">Skills</div>
+                    <div class="border-thin"></div>
+                    <div class="border-thick"></div>
+                    <div class="skills">
+                        <div>Ex Libris Alma</div>
+                        <div>Ex Libris Primo</div>
+                        <div>Ex Libris 360</div>
+                        <div>Ex Libris Summon</div>
+                        <div>SirsiDynix Symphony</div>
+                        <div>ILLiad</div>
+                        <div>LibAnswers</div>
+                        <div>LibGuides</div>
+                        <div>Adobe InDesign</div>
+                        <div>Adobe Illustrator</div>
+                        <div>Adobe Photoshop</div>
+                        <div>Inkscape</div>
+                        <div>Notepad++</div>
+                        <div>Visual Studio Code</div>
+                        <div>HTML/CSS</div>
+                        <div>WordPress</div>
+                        <div>3D Design</div>
+                        <div>3D Printing</div>
+                        <div>Laster Cutting</div>
+                        <div>Electronic Cutting</div>
+                        <div>Microsoft Word</div>
+                        <div>Microsoft Excel</div>
+                        <div>Microsoft Powerpoint</div>
+                    </div>
+                </div>
             </div>
             <div class="col-2-container">
                 <div class="section-wrap">
