--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <header>
             <p><a href="INSERT">cv</a></p>
             <p><a href="INSERT">portfolio</a></p>
+            <p><a href="INSERT">references</a></p>
             </header>
         </div>
     
@@ -39,7 +40,7 @@
                 <div class="section-wrap">
                     <div class="pfp"><img src="./images/pritz_profile-1.jpg"></div>
                     <div class="name">Michael Pritz</div>
-                    <div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                    <div class="bio">Still chasing the high of my first scholastic book fair.</div>
                 </div>
                 <div class="section-wrap">
                     <div class="at-a-glance">
@@ -49,7 +50,7 @@
                         </div>
                         <div class="line-2">
                             <p>Date of Birth</p>
-                            <p>28 November 1985</p>
+                            <p>28 November 1987</p>
                         </div>
                         <div class="line-3">
                             <p>Degree</p>
@@ -58,7 +59,7 @@
                     </div>
                 </div>
                 <div class="section-wrap">
-                    <a href="mailto:mpritz87@gmail.com">
+                    <a href="mailto:mpritz87@gmail.com" title="mailto:mpritz87@gmail.com">
                         <div class="contact">
                             Send Message
                         </div>
@@ -69,29 +70,32 @@
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
                     <div class="skills">
-                        <div>Ex Libris Alma</div>
-                        <div>Ex Libris Primo</div>
-                        <div>Ex Libris 360</div>
-                        <div>Ex Libris Summon</div>
-                        <div>SirsiDynix Symphony</div>
-                        <div>ILLiad</div>
-                        <div>LibAnswers</div>
-                        <div>LibGuides</div>
-                        <div>Adobe InDesign</div>
-                        <div>Adobe Illustrator</div>
-                        <div>Adobe Photoshop</div>
-                        <div>Inkscape</div>
-                        <div>Notepad++</div>
-                        <div>Visual Studio Code</div>
-                        <div>HTML/CSS</div>
-                        <div>WordPress</div>
-                        <div>3D Design</div>
-                        <div>3D Printing</div>
-                        <div>Laster Cutting</div>
-                        <div>Electronic Cutting</div>
-                        <div>Microsoft Word</div>
-                        <div>Microsoft Excel</div>
-                        <div>Microsoft Powerpoint</div>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Ex Libris Alma</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Ex Libris Primo</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Ex Libris 360</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Ex Libris Summon</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>SirsiDynix Symphony</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>ILLiad</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>LibAnswers</div></a>
+                       <a href="INSERT" target="_blank" title="INSERT"> <div>LibGuides</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Adobe InDesign</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Adobe Illustrator</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Adobe Photoshop</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Inkscape</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Notepad++</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Visual Studio Code</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>HTML/CSS</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>WordPress</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>3D Design</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>3D Printing</div></a>
+                        <a href="https://www.makerbot.com/" target="_blank" title="https://www.makerbot.com/"><div>MakerBot</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Laster Cutting</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Electronic Cutting</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Microsoft Word</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Microsoft Excel</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Microsoft Powerpoint</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Vendor Engagement</div></a>
+                        <a href="INSERT" target="_blank" title="INSERT"><div>Small Group Leadership</div></a>
                     </div>
                 </div>
             </div>
