--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
                     <div class="skills">
-                        <h2>Library Systems & Discover Platforms</h2>
+                        <h2>Library Systems & Discovery Platforms</h2>
                         <div class="skills-sub">
                             
                             <a href="https://exlibrisgroup.com/products/alma-library-services-platform/" target="_blank" title="https://exlibrisgroup.com/products/alma-library-services-platform/"><div>Ex Libris Alma</div></a>
