--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>CV - Michael Pritz</title>
         <link rel="stylesheet" href="https://use.typekit.net/ffe8zgm.css">
 		<link rel="stylesheet" href="style.css">
+        <meta name="robots" content="noindex, nofollow">
+
     </head>
 
     <body>
