--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="robots" content="noindex, nofollow">
         <title>CV - Michael Pritz</title>
         <link rel="stylesheet" href="https://use.typekit.net/ffe8zgm.css">
 		<link rel="stylesheet" href="style.css">
-        <meta name="robots" content="noindex, nofollow">
-
+        <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     </head>
 
     <body>
