--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="robots" content="noindex, nofollow">
-        <title>CV - Michael Pritz</title>
+        <title>Michael Pritz - Résumé</title>
         <link rel="stylesheet" href="https://use.typekit.net/ffe8zgm.css">
 		<link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
@@ -16,7 +16,7 @@
 
         <div id="header">
             <header>
-            <p><a href="INSERT">cv</a></p>
+            <p><a href="INSERT">résumé</a></p>
             <p><a href="INSERT">portfolio</a></p>
             <p><a href="INSERT">references</a></p>
             </header>
