--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
         <div id="masthead">
             <div class="txt">
-                Creative Librarian</br> Passion and <span>Experience.</span>
+                Information Professional: Systems, <em>Strategy</em>, and <span style="font-weight: 700">Service</span>
+                
             </div>
             <div class="urls">
                 <a href="https://linkedin.com/in/michael-pritz" target="_blank" title="https://linkedin.com/in/michael-pritz"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg></a>
@@ -42,7 +43,7 @@
                 <div class="section-wrap">
                     <div class="pfp"><img src="./images/pritz_profile-1.jpg"></div>
                     <div class="name">Michael Pritz</div>
-                    <div class="bio">Still chasing the high of my first scholastic book fair.</div>
+                    <div class="bio"><p>Bridging design and systems thinking to create accessible, service-driven library environments. Strategic, user-centered, and technically fluent.</p><p>Still chasing the high of my first scholastic book fair.</p></div>
                 </div>
                 <div class="section-wrap">
                     <div class="at-a-glance">
