--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <div id="masthead">
             <div class="txt">
                 Information Professional: Systems, <em>Strategy</em>, and <span style="font-weight: 700">Service</span>
-                
             </div>
             <div class="urls">
                 <a href="https://linkedin.com/in/michael-pritz" target="_blank" title="https://linkedin.com/in/michael-pritz"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg></a>
@@ -48,16 +47,16 @@
                 <div class="section-wrap">
                     <div class="at-a-glance">
                         <div class="line-1">
-                            <p>Profession</p>
-                            <p>Librarian</p>
+                            <p>Focus</p>
+                            <p>Systems, Design, Engagement</p>
                         </div>
                         <div class="line-2">
-                            <p>Date of Birth</p>
-                            <p>28 November 1987</p>
+                            <p>Sectors</p>
+                            <p>Federal, Academic, Public</p>
                         </div>
                         <div class="line-3">
-                            <p>Degree</p>
-                            <p>Graduate</p>
+                            <p>Availability</p>
+                            <p>On-site, Remote, Hybrid</p>
                         </div>
                     </div>
                 </div>
@@ -76,10 +75,10 @@
                         <h2>Professional Skills</h2>
                         <div class="skills-sub">
                             <div>Project Coordination</div>
-                            <div>Vendor Engagement</div>
+                            <div>Vendor Relations</div>
                             <div>Marketing & Outreach</div>
                             <div>Process Improvement</div>
-                            <div>Small Group Leadership</div>
+                            <div>Team Facilitation</div>
                             <div>Training & Instruction</div>
                         </div>
                         <h2>Systems & Discovery Platforms</h2>
@@ -90,8 +89,6 @@
                             <a href="https://exlibrisgroup.com/products/summon-library-discovery/" target="_blank" title="https://exlibrisgroup.com/products/summon-library-discovery/"><div>Ex Libris Summon</div></a>
                             <a href="https://www.sirsidynix.com/symphony/" target="_blank" title="https://www.sirsidynix.com/symphony/"><div>SirsiDynix Symphony</div></a>
                             <a href="https://www.oclc.org/en/illiad.html" target="_blank" title="https://www.oclc.org/en/illiad.html"><div>ILLiad</div></a>
-                            <a href="https://www.springshare.com/libanswers" target="_blank" title="https://www.springshare.com/libanswers"><div>LibAnswers</div></a>
-                            <a href="https://www.springshare.com/libguides" target="_blank" title="https://www.springshare.com/libguides"> <div>LibGuides</div></a>
                         </div>
                         <h2>Web Apps & Services</h2>
                         <div class="skills-sub">
