--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-1-container">
                 <div class="section-wrap">
                     <div class="pfp"><img src="./images/pritz_profile-1.jpg"></div>
-                    <div class="name">Michael Pritz</div>
+                    <div class="name">Michael Pritz, <span>MLIS</span></div>
                     <div class="bio"><p>Bridging design and systems thinking to create accessible, service-driven library environments. Strategic, user-centered, and technically fluent.</p><p>Still chasing the high of my first scholastic book fair.</p></div>
                 </div>
                 <div class="section-wrap">
