--- a/index.html
+++ b/index.html
@@ -127,8 +127,41 @@
                     <div class="section-heading">Volunteering</div>
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
-                    <h2>Toys-for-Tots Foundation</h2>
-                    <h2>One Brick</h2>
+
+                    <div class="job-container">
+                        <div class="col-1">
+                            <div class="company-img">
+                                <a href="https://onebrick.org/" target="_blank" title="https://onebrick.org/"><img src="./images/onebrick.png"></a>
+                            </div>
+                            <div class="company">
+                                <p class="company-name">OneBrick</p>
+                                <p class="company-location">Hurricane Katrina Aid</p>
+                            </div>
+                        </div>
+                        <div class="col-2"><p>June 2007</p></div>
+                    </div>
+                    <div class="job-description">
+                        <p>Worked with Habitat for Humanity volunteers to rebuild homes after the 2005 Hurricane Katrina disaster. Responsibilities included gutting homes, putting up drywall, and painting.</p>
+                    </div>
+
+                    <div class="break"></div>
+
+                    <div class="job-container">
+                        <div class="col-1">
+                            <div class="company-img">
+                                <a href="https://www.toysfortots.org/" target="_blank" title="https://www.toysfortots.org/"><img src="./images/toysfortots.png"></a>
+                            </div>
+                            <div class="company">
+                                <p class="company-name">Toys for Tots</p>
+                                <p class="company-location">Christmas Toy Campaign</p>
+                            </div>
+                        </div>
+                        <div class="col-2"><p>2008-2012</p></div>
+                    </div>
+                    <div class="job-description">
+                        <p>Participated in annual toy collection and distribution campaigns during the holiday season aimed at providing Christmas gifts to children residing in the Chicago metropolitan area.</p>
+                    </div>
+
                 </div>
 
             </div>
@@ -278,9 +311,26 @@
                     </div>
                     <div class="job-description">
                         <ul>
-                            <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
-                            <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                            <li>Planned and executed the integration of multiple information systems in a network environment.</li>
+                            <li>Created an Excel-based tracking system which maintained inventory records and locations of over $3 million worth of Department of Defense technology equipment dispersed throughout the Al Anbar Governorate of Western Iraq.</li>
+                            <li>Resolved over 1,000 customer information system problems in support of Operation Iraqi Freedom.</li>
+                            <li>Obtained a Department of Defense SECRET Security Clearance.</li>
                         </ul>
+                    </div>
+                    <div class="job-description">
+                        <p style="margin-top: 30px;"><span style="font-weight: 600;">Medals & Decorations:</span></p>
+                        <div class="list-columns">
+                            <ul class="column">
+                                <li>Global War on Terrorism Medal</li>
+                                <li>Iraq Campaign Service Medal</li>
+                                <li>Armed Forces Reserve Medal</li> 
+                            </ul>
+                            <ul class="column">
+                                <li>National Defense Service Medal</li>
+                                <li>Selected Marine Corps Reserve Medal</li>
+                                <li>Sea Service Deployment Ribbon</li>
+                            </ul>
+                        </div>
                     </div>  
                 </div>
 
@@ -303,7 +353,7 @@
                         <div class="col-2"><p>2019</p><p>Champaign, IL</p></div>
                     </div>
                     <div class="job-description">
-                        <p><span style="font-weight: 600;">Activities and Societies:</span> Student Leadership - Masters Student Faculty Meeting Representative, 2016-2017</p>
+                        <p><span style="font-weight: 600;">Activities & Societies:</span> Masters Student Faculty Meeting Representative, 2016-2017</p>
                     </div>
 
                     <div class="break"></div>
@@ -335,10 +385,30 @@
                             <div class="company">
                                 <p class="company-name">United States Marine Corps</p>
                                 <p class="company-location">Marine Corps Communication-Electronics School</p>
+                                <p class="job-title">Tactical Data Systems Operators Course</p>
                             </div>
                         </div>
                         <div class="col-2"><p>2007</p><p>Twentynine Palms, CA</p></div>
                     </div>
+                    <div class="job-description">
+                        <p style="margin-top: 30px;"><span style="font-weight: 600;">Training Curriculum:</span></p>
+                        <div class="list-columns">
+                            <ul class="column">
+                                <li>Network Fundamentals − 31.5 hr</li>
+                                <li>Microcomputer Hardware − 21.0 hr</li>
+                                <li>Security − 7.0 hr</li>
+                                <li>TCP/IP − 17.5 hr</li>
+                                <li>Troubleshooting Concepts − 42.0 hr</li>
+                            </ul>
+                            <ul class="column">
+                                <li>Switches − 17.5 hr</li>
+                                <li>Client Operating Systems − 49.0 hr</li>
+                                <li>Networking Operating Systems − 49.0 hr</li>
+                                <li>Operating Systems Concepts − 3.5 hr</li>
+                                <li>Messaging – 49.0 hr</li>
+                            </ul>
+                        </div>
+                    </div>  
 
                 </div>
 
