--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="section-wrap">
-                    <div class="section-heading">Volunteering</div>
+                    <div class="section-heading">Volunteer</div>
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
 
@@ -141,7 +141,7 @@
                         <div class="col-2"><p>June 2007</p></div>
                     </div>
                     <div class="job-description">
-                        <p>Worked with Habitat for Humanity volunteers to rebuild homes after the 2005 Hurricane Katrina disaster. Responsibilities included gutting homes, putting up drywall, and painting.</p>
+                        <p>Collaborated with Habitat for Humanity volunteers to rebuild homes in New Orleans following the 2005 disaster. Tasks included gutting damaged interiors, installing drywall, and painting.</p>
                     </div>
 
                     <div class="break"></div>
@@ -159,7 +159,7 @@
                         <div class="col-2"><p>2008-2012</p></div>
                     </div>
                     <div class="job-description">
-                        <p>Participated in annual toy collection and distribution campaigns during the holiday season aimed at providing Christmas gifts to children residing in the Chicago metropolitan area.</p>
+                        <p>Supported annual holiday drives in the Chicago metro area, collecting and distributing toys to children in underserved communities.</p>
                     </div>
 
                 </div>
@@ -308,14 +308,6 @@
                             </div>
                         </div>
                         <div class="col-2"><p>2006-2012</p><p>Chicago, IL</p></div>
-                    </div>
-                    <div class="job-description">
-                        <ul>
-                            <li>Planned and executed the integration of multiple information systems in a network environment.</li>
-                            <li>Created an Excel-based tracking system which maintained inventory records and locations of over $3 million worth of Department of Defense technology equipment dispersed throughout the Al Anbar Governorate of Western Iraq.</li>
-                            <li>Resolved over 1,000 customer information system problems in support of Operation Iraqi Freedom.</li>
-                            <li>Obtained a Department of Defense SECRET Security Clearance.</li>
-                        </ul>
                     </div>
                     <div class="job-description">
                         <p style="margin-top: 30px;"><span style="font-weight: 600;">Medals & Decorations:</span></p>
