--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
         </div>
 
         <div id="masthead">
-            <div class="txt">
+            <div class="txt animate">
                 Information Professional: Systems, <em>Strategy</em>, and <span style="font-weight: 700">Service</span>
             </div>
-            <div class="urls">
+            <div class="urls animate">
                 <a href="https://linkedin.com/in/michael-pritz" target="_blank" title="https://linkedin.com/in/michael-pritz"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg></a>
             </div>
         </div>
 
         <div id="resume">
             <div class="col-1-container">
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <div class="pfp"><img src="./images/pritz_profile-1.jpg"></div>
                     <div class="name">Michael Pritz, <span>MLIS</span></div>
                     <div class="bio"><p>Bridging design and systems thinking to create accessible, service-driven library environments. Strategic, user-centered, and technically fluent.</p><p>Still chasing the high of my first scholastic book fair.</p></div>
                 </div>
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <div class="at-a-glance">
                         <div class="line-1">
                             <p>Focus</p>
@@ -64,14 +64,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <a href="mailto:mpritz87@gmail.com" title="mailto:mpritz87@gmail.com">
                         <div class="contact">
                             Send Message
                         </div>
                     </a>
                 </div>
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <div class="section-heading">Competencies</div>
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
@@ -105,6 +105,7 @@
                             <a href="https://www.w3schools.com/html/" target="_blank" title="https://www.w3schools.com/html/"><div>HTML</div></a>
                             <a href="https://www.w3schools.com/css/" target="_blank" title="https://www.w3schools.com/css/"><div>CSS</div></a>
                             <a href="https://code.visualstudio.com/" target="_blank" title="https://code.visualstudio.com/"><div>Visual Studio Code</div></a>
+                            <a href="https://www.figma.com/" target="_blank" title="https://www.figma.com/"><div>Figma</div></a>
                             <a href="https://wordpress.com/" target="_blank" title="https://wordpress.com/"><div>WordPress</div></a>
                             <a href="https://notepad-plus-plus.org/" target="_blank" title="https://notepad-plus-plus.org/"><div>Notepad++</div></a>
                         </div>
@@ -127,7 +128,7 @@
                     </div>
                 </div>
 
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <div class="section-heading">Volunteer</div>
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
@@ -171,7 +172,7 @@
             </div>
 
             <div class="col-2-container">
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <div class="section-heading">Experience</div>
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
@@ -190,11 +191,13 @@
                         <div class="col-2"><p>2018-2026</p><p>Hampton, VA</p></div>
                     </div>
                     <div class="job-description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+                    <div class="job-description">
                         <ul>
                             <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
                             <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-                            <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
-                            <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                            <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                         </ul>
                     </div>
 
@@ -214,11 +217,13 @@
                         <div class="col-2"><p>2017-2018</p><p>Chicago, IL</p></div>
                     </div>
                     <div class="job-description">
+                        <p>Supported circulation desk operations, assisting patrons with transactions, item searches, and basic reference services while ensuring smooth coverage and building access.</p>
+                    </div>
+                    <div class="job-description">
                         <ul>
-                            <li>Provided library services at the Circulation desk, including transactions, item searches and basic reference services.</li>
-                            <li>Serves as lead on specific shifts including supervision of student workers.</li>
-                            <li>Opened and closed the library on weekends and helped facilitate building access and security issues.</li>
-                            <li>Completed Alma Administration Certification training program.</li>
+                            <li>Supervised student workers during assigned shifts, providing guidance and ensuring consistent service delivery.</li>
+                            <li>Managed weekend opening and closing procedures, addressing building access and security needs.</li>
+                            <li>Completed Alma Administration Certification, strengthening technical knowledge of library systems.</li>
                         </ul>
                     </div>
 
@@ -238,12 +243,13 @@
                         <div class="col-2"><p>2016-2018</p><p>Chicago, IL</p></div>
                     </div>
                     <div class="job-description">
+                        <p>Provided reference and information services for Northwestern’s Kellogg School of Management, School of Professional Studies, and the Osher Lifelong Learning Institute, supporting graduate students, professional learners, and lifelong learning participants while also serving Chicago’s broader public community.</p>
+                    </div>
+                    <div class="job-description">
                         <ul>
-                            <li>Provided library and information services for the Kellogg School of Management, the School of Professional Studies, the Osher Lifelong Learning Institute and other Chicago-based members of the Northwestern community.</li>
-                            <li>Helped patrons discover and navigate print and electronic resources, including Northwestern's online catalog and 900+ databases.</li>
-                            <li>Provided reference assistance and user instruction in person and online based on materials in the Schaffner Library collection as well as the larger Northwestern University Library collections.</li>
-                            <li>Served as a computer consultant for a lab within the library, trouble-shooting hardware and software problems.</li>
-                            <li>Supported various library operations, including retrieving and reshelving, circulation, intercampus and interlibrary loans, checking in serials and new books, and a wide range of special projects as assigned.</li>
+                            <li>Guided patrons in using the catalog and 900+ databases to access scholarly and professional resources.</li>
+                            <li>Delivered in-person and online instruction, strengthening research skills across academic and lifelong learning.</li>
+                            <li>Supported computer lab use for enrolled patrons and visitors, assisting with internet access and troubleshooting.</li>
                         </ul>
                     </div>
 
@@ -263,9 +269,13 @@
                         <div class="col-2"><p>2016-2018</p><p>Chicago, IL</p></div>
                     </div>
                     <div class="job-description">
+                        <p>Facilitated public access to digital fabrication tools, teaching design software and equipment use in the library’s Maker Lab while fostering community engagement and creative skill development.</p>
+                    </div>
+                    <div class="job-description">
                         <ul>
-                            <li>Provided free classes and instruction to the general public in the operation of open-source design software developed for the use of MakerBot 3D printers, CNC Routers, Full Spectrum Laser-Cutters, and Silhouette Cameo Electronic Cutters.</li>
-                            <li>Conducted workshops, performed routine maintenance on lab equipment, and provided tours to newcomers.</li>
+                            <li>Conducted workshops on 3D printing, laser cutting, and CNC routing for community members.</li>
+                            <li>Delivered instruction in open-source design software, enabling patrons to create and prototype projects.</li>
+                            <li>Maintained lab equipment and provided tours, ensuring safe and welcoming maker space access.</li>
                         </ul>
                     </div>
 
@@ -316,6 +326,16 @@
                         <div class="col-2"><p>2006-2012</p><p>Chicago, IL</p></div>
                     </div>
                     <div class="job-description">
+                        <p>Managed technology systems and equipment for military operations, supporting secure communications and information networks during deployment.</p>
+                    </div>
+                    <div class="job-description">
+                        <ul>
+                            <li>Developed Excel-based inventory system tracking $3M+ in Department of Defense technology assets.</li>
+                            <li>Integrated multiple information systems into cohesive network environments, enhancing operational efficiency.</li>
+                            <li>Resolved 1,000+ customer system issues in support of Operation Iraqi Freedom missions.</li>
+                        </ul>
+                    </div>
+                    <div class="job-description">
                         <p style="margin-top: 30px;"><span style="font-weight: 600;">Medals & Decorations:</span></p>
                         <div class="list-columns">
                             <ul class="column">
@@ -332,7 +352,7 @@
                     </div>  
                 </div>
 
-                <div class="section-wrap">
+                <div class="section-wrap animate">
                     <div class="section-heading">Education</div>
                     <div class="border-thin"></div>
                     <div class="border-thick"></div>
@@ -415,5 +435,8 @@
 
         </div>
         </div>
+
+        <script src="script.js"></script>
+
     </body>
 </html>
