--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
 
         <div id="masthead">
             <div class="txt animate">
-                Information Professional: Systems, <em>Strategy</em>, and <span style="font-weight: 700">Service</span>
+                Information Professional:<br> Systems, <em>Strategy</em>, and <span style="font-weight: 700">Service</span>
             </div>
             <div class="urls animate">
-                <a href="https://linkedin.com/in/michael-pritz" target="_blank" title="https://linkedin.com/in/michael-pritz"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg></a>
+                <a href="https://linkedin.com/in/michael-pritz" target="_blank" title="https://linkedin.com/in/michael-pritz">
+                    <svg class="linkedin-small" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+                    <svg class="linkedin-large" id="uuid-649ff18d-650f-4cdf-8357-72a30b75c7ee" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 250"><defs><style>.uuid-727cbd44-a3b2-4e88-9e2a-acab582f1f35,.uuid-c30d1583-7c9a-4523-8659-e512b320562e{fill:#fff;}.uuid-e928c7fd-275f-4257-b901-8e90647ea44f,.uuid-c30d1583-7c9a-4523-8659-e512b320562e{fill-rule:evenodd;}.uuid-e928c7fd-275f-4257-b901-8e90647ea44f,.uuid-f49cec6c-2697-4477-a451-e6b3134beb00{fill:#0a66c2;}</style></defs><g id="uuid-0a14f52c-d1bd-4cee-8fcd-27366e1e75c4"><path class="uuid-e928c7fd-275f-4257-b901-8e90647ea44f" d="M981.89,0h-213.05c-10.19,0-18.85,8.06-18.85,17.99v214.01c0,9.94,5.68,18,15.87,18h213.05c10.2,0,21.08-8.06,21.08-18V17.99c0-9.93-7.9-17.99-18.11-17.99Z"/><path class="uuid-c30d1583-7c9a-4523-8659-e512b320562e" d="M845.24,95.24h33.65v17.15h.37c5.13-9.25,20.29-18.64,39.02-18.64,35.96,0,46,19.1,46,54.46v66.07h-35.71v-59.56c0-15.83-6.32-29.73-21.11-29.73-17.95,0-26.51,12.15-26.51,32.11v57.18h-35.71v-119.05Z"/><rect class="uuid-727cbd44-a3b2-4e88-9e2a-acab582f1f35" x="785.71" y="95.24" width="35.71" height="119.05"/><circle class="uuid-727cbd44-a3b2-4e88-9e2a-acab582f1f35" cx="803.58" cy="53.58" r="22.32" transform="translate(215.41 603.73) rotate(-46.9)"/><g id="uuid-63732d18-5943-4eb1-8e58-28665d914e3f"><path id="uuid-f02fabf5-3072-4608-bc9f-6f1200d8dcbc" class="uuid-f49cec6c-2697-4477-a451-e6b3134beb00" d="M714.29,214.29h-33.33v-14.18h-.36c-7.42,8.6-20.3,15.67-42.13,15.67-29.76,0-55.39-22.39-55.39-60.88s25.26-61.14,56.51-61.14c19.35,0,31.36,6.88,38.63,15.67h.36V35.71h35.71v178.57ZM648.56,120.54c-20.42,0-31.89,14.56-31.89,33.92s11.48,34.54,31.89,34.54,32.39-14.77,32.39-34.54-11.95-33.92-32.39-33.92ZM567.39,195.11c-8.43,10.92-25.79,20.67-53.81,20.67-37.38,0-61.19-24.76-61.19-63.65,0-34.56,21.56-58.37,62.24-58.37,35.13,0,56.8,23.07,56.8,63.65,0,4.05-.65,8.07-.65,8.07h-84.69l.2,3.68c2.35,10.26,10.1,22.81,27.88,22.81,15.52,0,26.17-8.35,30.98-14.88l22.26,18.02h-.01ZM537.06,142.85c.24-12.55-8.98-25.29-23.5-25.29-17.29,0-26.51,13.5-27.48,25.3h50.98,0Z"/><path id="uuid-6460ea26-2827-4495-8f66-39491b0a32a7" class="uuid-f49cec6c-2697-4477-a451-e6b3134beb00" d="M452.38,95.24h-41.67l-41.67,47.62V35.71h-35.71v178.57h35.71v-59.52l44.04,59.52h42.17l-50.49-65.08,47.62-53.96ZM190.48,95.24h33.65v17.15h.37c5.13-9.25,20.29-18.64,39.02-18.64,35.96,0,46,22.82,46,54.46v66.07h-35.71v-59.56c0-17.52-6.32-29.73-21.11-29.73-17.95,0-26.51,14.21-26.51,32.11v57.18h-35.71v-119.05ZM130.95,214.29h35.71v-119.05h-35.71v119.05ZM148.82,75c11.83.28,21.65-9.09,21.93-20.92.28-11.83-9.09-21.65-20.92-21.93-.34,0-.67,0-1.01,0-11.83.28-21.2,10.1-20.92,21.93.27,11.44,9.48,20.65,20.92,20.92ZM35.71,35.71H0v178.57h107.14v-35.71H35.71V35.71Z"/></g></g></svg>
+                </a>
             </div>
         </div>
 
@@ -51,15 +54,15 @@
                 <div class="section-wrap animate">
                     <div class="at-a-glance">
                         <div class="line-1">
-                            <p>Focus</p>
+                            <p class="light">Focus</p>
                             <p>Systems, Design, Engagement</p>
                         </div>
                         <div class="line-2">
-                            <p>Sectors</p>
+                            <p class="light">Sectors</p>
                             <p>Federal, Academic, Public</p>
                         </div>
                         <div class="line-3">
-                            <p>Availability</p>
+                            <p class="light">Availability</p>
                             <p>On-site, Remote, Hybrid</p>
                         </div>
                     </div>
